# RANv4

./: .gitignore  CLAUDE.md  README.md  datasets.py  download_jet_data.py  evaluate.py  gaussian_parameters.tex  load_jet_data.py  log.out  log_omnifold_baseline.txt  main.py  models.py  plotting.py  pyproject.toml  sandbox.ipynb  submit.sh  train.py
params/: 1d_default.yaml  2d_correlated.yaml  4d_correlated.yaml  6d_correlated.yaml
ran/: __main__.py  evaluate.py  ibu_baseline.py  omnifold_baseline.py  plotting.py  train.py
ran/baselines/: ibu.py  omnifold.py
ran/data/: __init__.py  config.py  datasets.py  download.py  jets.py
runs/2026-03-14T044109Z/: discriminator.keras  generator.keras  history.npz  metrics.json  metrics_omnifold.json  omnifold_weights.npz
runs/2026-03-14T044110Z/: config.json  discriminator.keras  generator.keras  history.npz  ibu_weights.npz  metrics.json  metrics_ibu.json  metrics_omnifold.json  omnifold_weights.npz
runs/2026-03-14T044210Z/: config.json  discriminator.keras  generator.keras  history.npz  metrics.json  metrics_ibu.json  metrics_omnifold.json  omnifold_weights.npz
runs/2026-03-14T051912Z/: config.json  discriminator.keras  (+5 more)
scripts/: leakage_check.py  submit.sh
tests/: test_config.py  test_datasets.py
weights/: OmniFold_omnifold_baseline_iter0_step1.pkl  OmniFold_omnifold_baseline_iter0_step1.weights.h5  OmniFold_omnifold_baseline_iter0_step2.pkl  OmniFold_omnifold_baseline_iter0_step2.weights.h5  OmniFold_omnifold_baseline_iter1_step1.pkl  OmniFold_omnifold_baseline_iter1_step1.weights.h5  OmniFold_omnifold_baseline_iter1_step2.pkl  OmniFold_omnifold_baseline_iter1_step2.weights.h5  OmniFold_omnifold_baseline_iter2_step1.pkl  OmniFold_omnifold_baseline_iter2_step1.weights.h5  OmniFold_omnifold_baseline_iter2_step2.pkl  OmniFold_omnifold_baseline_iter2_step2.weights.h5
(+163 files in other folders)
