[project]
name = "ranv4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fire>=0.7.1",
    "keras>=3.13.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "nvidia-cudnn-cu12>=9.20.0.48",
    "scipy>=1.15.0",
    "tensorflow>=2.21.0",
]
