[project]
name = "ranv4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fire>=0.7.1",
    "keras>=3.13.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "omnifold>=0.1.36",
    "pyyaml>=6.0",
    "scipy>=1.15.0",
    "tensorflow>=2.21.0 ; platform_machine == 'arm64' and sys_platform == 'darwin'",
    "tensorflow[and-cuda]>=2.21.0 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.uv]
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
]
